--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "automationplayground-cypress",
+  "name": "Cypress-Projects",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
